tests/errors/lex_char2.java
public class lex_char2 {
	char b = '\b;
}
